Fix home spacing, adjust CSS for small devices
- Removed the left spacing on home screen
- Decreased font sizes and button sizes for smaller screens

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -7,6 +7,7 @@
     position: fixed;
     height: 100%;
     width: 100%;
+    left:0;
     align-items: center;
     align-content: center;
     text-align: center;
