--- a/src/css/bootstrap-navbar.css
+++ b/src/css/bootstrap-navbar.css
@@ -88,10 +88,11 @@
     .navbar-collapse {
       position: absolute;
       display: inline-flex;
-      max-width: 20em;
+      max-width: 14em;
 
-      padding-top: 1em;
-      top: 4em;
+      padding-top: .7em;
+      padding-bottom: .7em;
+      top: 5.5rem;
 
       -webkit-box-shadow: inset 0 0 1em 0.25em rgba(0,0,0,0.75);
       -moz-box-shadow: inset 0 0 1em 0.25em rgba(0,0,0,0.75);
@@ -118,22 +119,22 @@
       justify-content: end;
     }
     
-    .navbar-nav{
+    .navbar-nav {
       display: inline !important;
       flex-direction: row;
     }
 
-    .nav-link{
+    .nav-link {
       display: inline-block;
-      height:5em;
+      height:4em;
       width: 33%;
       text-align: center;
-      font-size: .75em;
+      font-size: .7em;
 
       margin: 0 0 2em 0;
     }
 
-    .navbar svg{
+    .navbar svg {
       height: 3em;
       width: 3em;
     }
